<resources>
    <string name="app_name">BMICalculator</string>
    <string name="weight">Weight</string>
    <string name="weight_hint">00</string>
    <string name="kg_unit">Kg</string>
    <string name="height">Height</string>
    <string name="height_hint">00</string>
    <string name="unit_cm">Cm</string>
    <string name="calculate_button">Calculate</string>
    <string name="your_bmi_title">Your BMI</string>
    <string name="empty_string" />
    <string name="normal_range_text">Normal range is 18.5 - 24.9</string>

</resources>