<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeight"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_marginBottom="40dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
        app:layout_constraintEnd_toStartOf="@id/cvHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvResult"
        app:layout_constraintVertical_bias="0.57">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.214" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="105dp"
                android:layout_height="84dp"
                android:ems="10"
                android:hint="@string/weight_hint"
                android:inputType="number"
                android:maxLength="3"
                android:textColorHint="@color/text_hint"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.205"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.789"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/tvWeightUnit"
                android:layout_width="45dp"
                android:layout_height="59dp"
                android:text="@string/kg_unit"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.881"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.822" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHeight"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_marginBottom="40dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="20dp"

        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cvWeight"
        app:layout_constraintTop_toBottomOf="@id/cvResult"
        app:layout_constraintVertical_bias="0.57">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.214" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="99dp"
                android:layout_height="86dp"
                android:ems="10"
                android:hint="@string/height_hint"
                android:inputType="number"
                android:maxLength="3"
                android:textColorHint="@color/text_hint"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.205"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.789" />

            <TextView
                android:id="@+id/tvHeightUnit"
                android:layout_width="44dp"
                android:layout_height="34dp"
                android:text="@string/unit_cm"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.882"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.686" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="309dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/button_background"
        android:elevation="20dp"
        android:text="@string/calculate_button"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvResult"
        android:layout_width="354dp"
        android:layout_height="271dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/result_card_background"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/BMItext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_bmi_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tvIndex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_string"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:textAlignment="center"
                android:textColor="@color/text_hint"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>